BMERCP/src/C2SystemVerilogTransformations/C2SystemVerilogParser.java
// Generated from E://EclipseWorkspaces//GUIProjectWorkSpace//BMERCP//src//C2SystemVerilogTransformations//C2SystemVerilog.g4 by ANTLR 4.13.1

package C2SystemVerilogTransformations;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class C2SystemVerilogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, CONST=12, IF=13, EXTERN=14, ELSE=15, CASE=16, DEFAULT=17, 
		SWITCH=18, BREAK=19, FOR=20, WHILE=21, PRINTF=22, INCLUDE=23, DEFINE=24, 
		TYPEDEF=25, ENUM=26, VOLATILE=27, ID=28, INT=29, HEX_INT=30, WS=31, SINGLE_LINE_COMMENT=32, 
		MULTI_LINE_COMMENT=33, STRING=34, CHAR=35, SEMICOLON=36, COLON=37, COMMA=38, 
		DOT=39, LPAREN=40, RPAREN=41, LBRACE=42, RBRACE=43, LBRACK=44, RBRACK=45, 
		EQUAL=46, PLUS=47, PLUSPPLUS=48, MINUS=49, MINUSMINUS=50, MINUSEQUAL=51, 
		PLUSEQUAL=52, EQUALMINUS=53, EQUALPLUS=54, STAR=55, SLASH=56, PERCENT=57, 
		LT=58, GT=59, LE=60, GE=61, EQEQ=62, NOTEQ=63, QUOTE=64, DOUBLE_QUOTE=65, 
		DOLLAR=66, AND=67, OR=68;
	public static final int
		RULE_file = 0, RULE_preprocessorDirective = 1, RULE_includeDirective = 2, 
		RULE_systemInclude = 3, RULE_localInclude = 4, RULE_moduleDecl = 5, RULE_moduleItem = 6, 
		RULE_enumDecl = 7, RULE_enumList = 8, RULE_functionDecl = 9, RULE_returnType = 10, 
		RULE_parameterList = 11, RULE_parameter = 12, RULE_declaration = 13, RULE_dataType = 14, 
		RULE_statement = 15, RULE_statementTwo = 16, RULE_returnStatement = 17, 
		RULE_assignment = 18, RULE_assignmentType = 19, RULE_indexedID = 20, RULE_functionCall = 21, 
		RULE_argumentList = 22, RULE_argument = 23, RULE_transformedArgument = 24, 
		RULE_dataCastArgument = 25, RULE_functionCallArgument = 26, RULE_functionCallID = 27, 
		RULE_ifStatement = 28, RULE_loopStatement = 29, RULE_forLoop = 30, RULE_whileLoop = 31, 
		RULE_switchStatement = 32, RULE_caseBlock = 33, RULE_defaultBlock = 34, 
		RULE_expression = 35, RULE_primary = 36, RULE_operator = 37, RULE_castFunctionCall = 38, 
		RULE_printStatement = 39, RULE_comment = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "preprocessorDirective", "includeDirective", "systemInclude", 
			"localInclude", "moduleDecl", "moduleItem", "enumDecl", "enumList", "functionDecl", 
			"returnType", "parameterList", "parameter", "declaration", "dataType", 
			"statement", "statementTwo", "returnStatement", "assignment", "assignmentType", 
			"indexedID", "functionCall", "argumentList", "argument", "transformedArgument", 
			"dataCastArgument", "functionCallArgument", "functionCallID", "ifStatement", 
			"loopStatement", "forLoop", "whileLoop", "switchStatement", "caseBlock", 
			"defaultBlock", "expression", "primary", "operator", "castFunctionCall", 
			"printStatement", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'uint8_t'", "'uint32_t'", "'osThreadId'", "'char'", "'TickType_t'", 
			"'osEvent'", "'float'", "'void'", "'return'", "'&'", "'const'", "'if'", 
			"'extern'", "'else'", "'case'", "'default'", "'switch'", "'break'", "'for'", 
			"'while'", "'printf'", "'#include'", "'#define'", "'typedef'", "'enum'", 
			"'volatile'", null, null, null, null, null, null, null, null, "';'", 
			"':'", "','", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", 
			"'+'", "'++'", "'-'", "'--'", "'-='", "'+='", "'=-'", "'=+'", "'*'", 
			"'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'''", "'\"'", 
			"'$'", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"CONST", "IF", "EXTERN", "ELSE", "CASE", "DEFAULT", "SWITCH", "BREAK", 
			"FOR", "WHILE", "PRINTF", "INCLUDE", "DEFINE", "TYPEDEF", "ENUM", "VOLATILE", 
			"ID", "INT", "HEX_INT", "WS", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
			"STRING", "CHAR", "SEMICOLON", "COLON", "COMMA", "DOT", "LPAREN", "RPAREN", 
			"LBRACE", "RBRACE", "LBRACK", "RBRACK", "EQUAL", "PLUS", "PLUSPPLUS", 
			"MINUS", "MINUSMINUS", "MINUSEQUAL", "PLUSEQUAL", "EQUALMINUS", "EQUALPLUS", 
			"STAR", "SLASH", "PERCENT", "LT", "GT", "LE", "GE", "EQEQ", "NOTEQ", 
			"QUOTE", "DOUBLE_QUOTE", "DOLLAR", "AND", "OR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C2SystemVerilog.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public C2SystemVerilogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(C2SystemVerilogParser.EOF, 0); }
		public List<PreprocessorDirectiveContext> preprocessorDirective() {
			return getRuleContexts(PreprocessorDirectiveContext.class);
		}
		public PreprocessorDirectiveContext preprocessorDirective(int i) {
			return getRuleContext(PreprocessorDirectiveContext.class,i);
		}
		public List<IncludeDirectiveContext> includeDirective() {
			return getRuleContexts(IncludeDirectiveContext.class);
		}
		public IncludeDirectiveContext includeDirective(int i) {
			return getRuleContext(IncludeDirectiveContext.class,i);
		}
		public List<ModuleDeclContext> moduleDecl() {
			return getRuleContexts(ModuleDeclContext.class);
		}
		public ModuleDeclContext moduleDecl(int i) {
			return getRuleContext(ModuleDeclContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13219690494L) != 0)) {
				{
				setState(85);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEFINE:
					{
					setState(82);
					preprocessorDirective();
					}
					break;
				case INCLUDE:
					{
					setState(83);
					includeDirective();
					}
					break;
				case T__0:
				case T__1:
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
				case T__7:
				case T__8:
				case T__9:
				case CONST:
				case IF:
				case EXTERN:
				case SWITCH:
				case FOR:
				case WHILE:
				case PRINTF:
				case TYPEDEF:
				case ID:
				case SINGLE_LINE_COMMENT:
				case MULTI_LINE_COMMENT:
					{
					setState(84);
					moduleDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreprocessorDirectiveContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(C2SystemVerilogParser.DEFINE, 0); }
		public TerminalNode ID() { return getToken(C2SystemVerilogParser.ID, 0); }
		public TerminalNode INT() { return getToken(C2SystemVerilogParser.INT, 0); }
		public TerminalNode EQUAL() { return getToken(C2SystemVerilogParser.EQUAL, 0); }
		public TerminalNode SEMICOLON() { return getToken(C2SystemVerilogParser.SEMICOLON, 0); }
		public PreprocessorDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocessorDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterPreprocessorDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitPreprocessorDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitPreprocessorDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreprocessorDirectiveContext preprocessorDirective() throws RecognitionException {
		PreprocessorDirectiveContext _localctx = new PreprocessorDirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preprocessorDirective);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(DEFINE);
			setState(93);
			match(ID);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUAL) {
				{
				setState(94);
				match(EQUAL);
				}
			}

			setState(97);
			match(INT);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(98);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IncludeDirectiveContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(C2SystemVerilogParser.INCLUDE, 0); }
		public SystemIncludeContext systemInclude() {
			return getRuleContext(SystemIncludeContext.class,0);
		}
		public LocalIncludeContext localInclude() {
			return getRuleContext(LocalIncludeContext.class,0);
		}
		public IncludeDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterIncludeDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitIncludeDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitIncludeDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeDirectiveContext includeDirective() throws RecognitionException {
		IncludeDirectiveContext _localctx = new IncludeDirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_includeDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(INCLUDE);
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LT:
				{
				setState(102);
				systemInclude();
				}
				break;
			case DOUBLE_QUOTE:
				{
				setState(103);
				localInclude();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemIncludeContext extends ParserRuleContext {
		public TerminalNode LT() { return getToken(C2SystemVerilogParser.LT, 0); }
		public TerminalNode ID() { return getToken(C2SystemVerilogParser.ID, 0); }
		public TerminalNode GT() { return getToken(C2SystemVerilogParser.GT, 0); }
		public SystemIncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemInclude; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterSystemInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitSystemInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitSystemInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SystemIncludeContext systemInclude() throws RecognitionException {
		SystemIncludeContext _localctx = new SystemIncludeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_systemInclude);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(LT);
			setState(107);
			match(ID);
			setState(108);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LocalIncludeContext extends ParserRuleContext {
		public List<TerminalNode> DOUBLE_QUOTE() { return getTokens(C2SystemVerilogParser.DOUBLE_QUOTE); }
		public TerminalNode DOUBLE_QUOTE(int i) {
			return getToken(C2SystemVerilogParser.DOUBLE_QUOTE, i);
		}
		public TerminalNode ID() { return getToken(C2SystemVerilogParser.ID, 0); }
		public LocalIncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localInclude; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterLocalInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitLocalInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitLocalInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalIncludeContext localInclude() throws RecognitionException {
		LocalIncludeContext _localctx = new LocalIncludeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_localInclude);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(DOUBLE_QUOTE);
			setState(111);
			match(ID);
			setState(112);
			match(DOUBLE_QUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDeclContext extends ParserRuleContext {
		public ModuleItemContext moduleItem() {
			return getRuleContext(ModuleItemContext.class,0);
		}
		public ModuleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterModuleDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitModuleDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitModuleDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclContext moduleDecl() throws RecognitionException {
		ModuleDeclContext _localctx = new ModuleDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_moduleDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			moduleItem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleItemContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public EnumDeclContext enumDecl() {
			return getRuleContext(EnumDeclContext.class,0);
		}
		public ModuleItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterModuleItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitModuleItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitModuleItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleItemContext moduleItem() throws RecognitionException {
		ModuleItemContext _localctx = new ModuleItemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_moduleItem);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				functionDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				enumDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumDeclContext extends ParserRuleContext {
		public TerminalNode TYPEDEF() { return getToken(C2SystemVerilogParser.TYPEDEF, 0); }
		public TerminalNode ENUM() { return getToken(C2SystemVerilogParser.ENUM, 0); }
		public TerminalNode LBRACE() { return getToken(C2SystemVerilogParser.LBRACE, 0); }
		public EnumListContext enumList() {
			return getRuleContext(EnumListContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(C2SystemVerilogParser.RBRACE, 0); }
		public TerminalNode ID() { return getToken(C2SystemVerilogParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(C2SystemVerilogParser.SEMICOLON, 0); }
		public EnumDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterEnumDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitEnumDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitEnumDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumDeclContext enumDecl() throws RecognitionException {
		EnumDeclContext _localctx = new EnumDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_enumDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(TYPEDEF);
			setState(123);
			match(ENUM);
			setState(124);
			match(LBRACE);
			setState(125);
			enumList();
			setState(126);
			match(RBRACE);
			setState(127);
			match(ID);
			setState(128);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(C2SystemVerilogParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(C2SystemVerilogParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(C2SystemVerilogParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(C2SystemVerilogParser.COMMA, i);
		}
		public EnumListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).enterEnumList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2SystemVerilogListener ) ((C2SystemVerilogListener)listener).exitEnumList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C2SystemVerilogVisitor ) return ((C2SystemVerilogVisitor<? extends T>)visitor).visitEnumList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumListContext enumList() throws RecognitionException {
		EnumListContext _localctx = new EnumListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_enumList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(ID);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(131);
				match(COMMA);
				setState(132);
				match(ID);
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
